<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/foto"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="130dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/perkenalan_diri"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="15sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/email"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:layout_marginTop="310dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/ig"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="390dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/findme" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="15sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/find_me" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="650dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/about_version_apk_1_0"/>

</FrameLayout>